--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -16,19 +16,11 @@ body:
     validations:
       required: true
   - type: input
-    id: sdk_version
+    id: library_version
     attributes:
-      label: SDK Version
-      description: Do these docs apply to a specific SDK version?
-      placeholder: Octokit.NET v4.0.1
-    validations:
-      required: false
-  - type: input
-    id: api_version
-    attributes:
-      label: API Version
-      description: Do these docs apply to a specific version of the GitHub REST API or GraphQL API?
-      placeholder: ex. v1.1.1
+      label: Library Version
+      description: Do these docs apply to a specific library version?
+      placeholder: utils 1.1.1
     validations:
       required: false
   - type: textarea
