--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-  sonar:
-    runs-on: ubuntu-latest
-    needs: [ build ]
-    steps:
+        run: mvn clean install --file pom.xml
       - name: Analyze with SonarCloud
         # You can pin the exact commit or the version.
         # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
@@ -43,15 +38,6 @@ jobs:
             # mandatory
             -Dsonar.projectKey=AshishKmrSingh_multi-tenant
             -Dsonar.organization=ashishpersonal
-            #-Dsonar.test.exclusions=tests/**
-            # Comma-separated paths to directories containing main source files.
-            #-Dsonar.sources= # optional, default is project base directory
-            # When you need the analysis to take place in a directory other than the one from which it was launched
-            #-Dsonar.projectBaseDir= # optional, default is .
-            # Comma-separated paths to directories containing test source files.
-            #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
-            # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
-            #-Dsonar.verbose= # optional, default is false
 
   check-licenses:
     runs-on: ubuntu-latest
