--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -56,6 +56,10 @@ jobs:
       - name: Snyk Code test
         run: snyk code test --sarif > snyk-code.sarif || true
 
+        # Synk Auth for CLI
+      - name: Synk Auth
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       - name: Snyk Open Source monitor
         run: snyk monitor --all-projects
@@ -65,7 +69,7 @@ jobs:
       - name: Snyk IaC test and report
         run: snyk iac test --report # || true
 
-        # Push the Snyk Code results into GitHub Code Scanning tab
+        z# Push the Snyk Code results into GitHub Code Scanning tab
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
