--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Snyk IaC test and report
         run: snyk iac test --report # || true
 
-        z# Push the Snyk Code results into GitHub Code Scanning tab
+        # Push the Snyk Code results into GitHub Code Scanning tab
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
