Synk Auth with env

--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -58,7 +58,7 @@ jobs:
 
         # Synk Auth for CLI
       - name: Synk Auth
-        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+        run: snyk auth $SNYK_TOKEN
 
         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       - name: Snyk Open Source monitor
