--- a/.github/workflows/license-compliance.yml
+++ b/.github/workflows/license-compliance.yml
@@ -26,7 +26,9 @@ jobs:
         run: mvn verify dependency:list -DskipTests -Dmaven.javadoc.skip=true -DappendOutput=true -DoutputFile=maven.deps
       - name: Run Eclipse Dash to generate DEPENDENCIES file
         run: java -jar eclipse-dash/org.eclipse.dash.licenses-1.1.1.jar maven.deps -summary DEPENDENCIES
-      - uses: actions/upload-artifact@v4
+      - name: Archive DEPENDENCIES file
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: LICENSE_INFO
-          path: DEPENDENCIES
+          path: DEPENDENCIESx
