--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,5 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean deploy -e -X sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.projectKey=AshishKmrSingh_multi-tenant -Dsonar.organization=ashishpersonal
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
