--- a/.github/workflows/license-compliance.yml
+++ b/.github/workflows/license-compliance.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Generate List of dependencies
-        run: mvn verify dependency:list -DskipTests -Dmaven.javadoc.skip=true -DappendOutput=true -DoutputFile=maven.deps
+        run: mvn verify dependency:list -s settings.xml -DskipTests -Dmaven.javadoc.skip=true -DappendOutput=true -DoutputFile=maven.deps
       - name: Run Eclipse Dash to generate DEPENDENCIES file
         run: java -jar eclipse-dash/org.eclipse.dash.licenses-1.1.1.jar maven.deps -summary DEPENDENCIES
       - name: Archive DEPENDENCIES file
