--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>mars2-multitenant</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>mars2-multitenant</name>
